# tree-sitter-jshtml

./: .eslintrc.js  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package.json  scanner.diff
bindings/c/: tree-sitter-jshtml.h
bindings/node/: binding.cc  index.js
bindings/rust/: README.md  lib.rs
bindings/swift/TreeSitterHTML/: html.h
queries/: highlights.scm  indents.scm  injections.scm  matchup.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: html.txt  syntax-errors.txt  tpl_blocks.txt  tpl_conditions.txt  tpl_foreach.txt  tpl_sections.txt  tpl_tags.txt  tpl_use.txt  tpl_variables.txt
