[package]
name = "tree-sitter-jshtml"
description = "HTML grammar for tree-sitter"
version = "0.20.3"
authors = [
  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
  "Amaan Qureshi <amaanq12@gmail.com>",
  "Vadim Pavlov <vadim@fieldinsight.com>"
]
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "jshtml"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Scheduleflow/tree-sitter-jshtml"
edition = "2024"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.21.0"

[build-dependencies]
cc = "1.0.87"
